GitHub ci (#1)
* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* maven

* fixed test

* fixed test

---------

Co-authored-by: Gregory Maldonado <gregory.maldonado@caci.com>